k8s-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-sample-rt
  namespace: python-sample
spec:
  to:
    name: 'python-sample-svc'
    kind: Service
